--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Vite App</title>
-    <style type='text/css'>
-      *{
+    <style type="text/css">
+      @media screen and (max-width: 1990px) {
+        html {
+          font-size: 100px;
+        }
+      }
+      @media screen and (max-width: 1580px) {
+        html {
+          font-size: 60px;
+        }
+      }
+
+      * {
         margin: 0px;
         padding: 0px;
       }
       body {
         width: 100vw;
-        height:100vh;
+        height: 100vh;
         background-image: url('/src/assets/images/背景.png');
       }
     </style>
